# SafeNet

./: README.md
database/std/: 1.txt
knowledgebase/: README.md
knowledgebase/Arc::from_raw/: 1-String2rc-safe.rs  1-String2rc-unsafe.rs  1-arcfromraw-simple-unsafe-low.rs  1-box2rc-safe.rs  1-box2rc-unsafe.rs  1-vec2rc-safe.rs  1-vec2rc-unsafe.rs  2-rawptr-unsafe.rs  3-coersion-safe.rs  3-coersion-unsafe.rs  4-selfclone2rc-unsafe.rs  4-selfcopy2rc-safe.rs  4-selfcopy2rc-unsafe.rs
knowledgebase/Box::from_raw/: 1-drop-unsafe-2-high.rs  1-drop-unsafe-high.rs  1-dropraw-unsafe.rs  1-funparraw-unsafe.rs  2-alloc-safe.rs  2-alloc-unsafe-2-low.rs  2-alloc-unsafe.rs  2-dropself-unsafe.rs  3-fromraw-unsafe.rs  3-simple-unsafe-low.rs  3-string-unsafe-2-low.rs  4-copycoersion-safe.rs  5-tostr-unsafe.rs  5-tovec-unsafe.rs  6-modify-unsafe.rs  new3-tostr-unsafe.rs  new4-coersion-unsafe.rs  new4-copycoersion-unsafe.rs  new5-modify-unsafe.rs  new6-funparraw-unsafe.rs
knowledgebase/Box::from_raw_in/: 1-simple-safe.rs  1-simple-unsafe.rs
knowledgebase/CStr::from_ptr/: 1-cstrfromffi-unsafe.rs  1-cstrfromptr-unsafe.rs  1-funparraw-unsafe.rs  1-funparraw2-unsafe.rs  1-funparraw3-unsafe.rs  2-funparself-unsafe.rs  3-creatcstr-safe.rs  3-creatcstr-unsafe.rs  3-cstrfromffi-unsafe.rs  3-fromstring-unsafe.rs  4-resraw-unsafe.rs  4-resraw2-unsafe.rs  5-cstrtobox-unsafe.rs  6-modify-unsafe.rs  new3-fromraw-unsafe.rs  new6-modify-unsafe.rs
src/process/: abstractAST.rs  (+4 more)
src/process/rust_ast/: Cargo.toml
src/process/rust_ast/src/: main.rs
testdata/: README.md
transmute/: 2-10.rs
(+3268 files in other folders)
